# docs/swagger.json
@@ -211,12 +211,12 @@
                         "required": true
                     },
                     {
-                        "description": "Объект UpdatePetRequest в формате JSON",
+                        "description": "Объект PetUpdateRequest в формате JSON",
                         "name": "pet",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.UpdatePetRequest"
+                            "$ref": "#/definitions/model.PetUpdateRequest"
                         }
                     }
                 ],
@@ -224,13 +224,13 @@
                     "200": {
                         "description": "Питомец успешно обновлен",
                         "schema": {
-                            "$ref": "#/definitions/model.UpdatePetRequest"
+                            "$ref": "#/definitions/model.PetUpdateRequest"
                         }
                     },
                     "400": {
                         "description": "Неверный запрос",
                         "schema": {
-                            "$ref": "#/definitions/model.UpdatePetRequest"
+                            "$ref": "#/definitions/model.PetUpdateRequest"
                         }
                     }
                 }
@@ -329,15 +329,7 @@
                 }
             }
         },
-        "model.RemoveImageResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.UpdatePetRequest": {
+        "model.PetUpdateRequest": {
             "type": "object",
             "properties": {
                 "birthdate": {
@@ -372,6 +364,14 @@
                 },
                 "weight": {
                     "type": "number"
+                }
+            }
+        },
+        "model.RemoveImageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         },
